# nikita-render

./: CMakeLists.txt  README.md  index.html  main.cpp  params.json  version.h
core/: BoundingBox.cpp  BoundingBox.h  bxdf.cpp  bxdf.h  camera.cpp  camera.h  color.cpp  color.h  intersection.cpp  intersection.h  light.cpp  light.h  material.cpp  material.h  nikita.h  primitive.cpp  primitive.h  ray.cpp  ray.h  renderer.cpp  renderer.h  sampler.cpp  sampler.h  scene.cpp  scene.h  sensor.cpp  sensor.h  shape.h  sphere.cpp  sphere.h  surfaceShader.cpp  surfaceShader.h  transform.cpp  transform.h  triangleMesh.cpp  triangleMesh.h
core/accelerator/: BoundingBox.cpp  BoundingBox.h  bvh.cpp  bvh.h
core/light/: light.cpp  light.h
core/renderer/: renderer.cpp  renderer.h
core/shading/: bxdf.cpp  bxdf.h  intersection.cpp  intersection.h  material.cpp  material.h  surfaceShader.cpp  surfaceShader.h
core/shapes/: cylinder.cpp  cylinder.h  shape.h  sphere.cpp  sphere.h  triangleMesh.cpp  triangleMesh.h
core/texture/: fbmNoise.cpp  fbmNoise.h  imageTexture.cpp  imageTexture.h  texture.cpp  texture.h  textureMapping.cpp  textureMapping.h
images/: bunny_scene.xml  nikita_scene_phong.xml  nikita_scene_phong_bvh.xml  sphere_bunny_3d_tex.xml  spheres_series.xml  spheres_with_bunnies.xml  spheres_with_bunnies_bvh.xml
images/shadows/: simple.xml  spheres.xml  spheres_bunnies.xml
numerical/: quadratic.cpp  quadratic.h
test/: TestColor.cpp  TestNumerical.cpp  TestReaders.cpp  TestShapes.cpp  bigDragon.smf  bunnies.xml  bunny_1k.smf  bunny_69k.smf  bunny_scene.xml  bunny_small.smf  cow_scene.xml  cube.smf  cylinder.xml  dragon.smf  dragon.xml  dragon_scene.xml  floor.smf  full_test.xml  main.cpp  nikita_scene.xml  nikita_scene_phong.xml  partial_spheres.xml  sphere_bunny_spotlight.xml  sphere_texture.xml  spheres_with_bunnies_bvh.xml  spheres_with_bunnies_simple.xml  teapot_scene.xml
util/: cpuTimer.h  image.cpp  image.h  mathUtils.h  sceneParser.cpp  sceneParser.h  smfReader.cpp  smfReader.h  stringUtils.cpp  stringUtils.h
